--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <figure class="gallery">
       <img src="http://www.eastcottvets.co.uk/uploads/Animals/gingerkitten.jpg"/>
     </figure>  
+    <figure class="gallery">
+      <img src="hello-world/calm ur tits.jpg"/>
+    </figure>
     </div>
   </body>
 
