--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     </ul>
 </nav>
 <div class="name"><h1>Co. Name</div></h1>
-      <h1 class="header"> </h1>
+      <h3 class="header"> Address & Contact Info</h3>
 <div class="gallery-complete">
   <figure class="gallery">
-    <img src="http://img.pai.pt/mysite/media/36/79/6/05814892-1375-45ef-be9d-ce177bb08398.jpg"/>
+    <img src=#PLACEHOLDER/>
     </figure>
     <figure class="gallery">
-      <img src="https://s-media-cache-ak0.pinimg.com/236x/0e/60/dd/0e60dda3fe5a8311e850e908787653b6.jpg"/>
+      <img src="#PLACEHOLDER/>
     </figure>
     <figure class="gallery">
-      <img src="http://www.eastcottvets.co.uk/uploads/Animals/gingerkitten.jpg"/>
+      <img src=#PLACEHOLDER/>
     </figure>  
     <figure class="gallery">
-      <img src="hello-world/calm ur tits.jpg"/>
+      <img src=#PLACEHOLDER/>
     
     </figure>
     </div>
