--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
   <head>
-    <link rel="stylesheet" href="stylesheets/first.css">
+    <link rel="stylesheet", type="text/css">, href="stylesheets/first.css"/>
     <script src="script.js"></script>
     <title>Firsts!</title>
   </head>
