--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </ul>
 </nav>
 <div class="name"><h1>Co. Name</div></h1>
-      <h3 class="header"> Address & Contact Info</h3>
+      <h3> Address & Contact Info</h3>
 <div class="gallery-complete">
   <figure class="gallery">
     <img src=#PLACEHOLDER/>
