--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <img src=#PLACEHOLDER/>
     </figure>  
     <figure class="gallery">
-      <img src=#PLACEHOLDER/>
+      <img src="http://i.telegraph.co.uk/multimedia/archive/02830/cat_2830677b.jpg"/>
     
     </figure>
     </div>
