--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       <h3>Address Contact Info</h3>
 <div class="gallery-complete">
   <figure class="gallery">
-    <img src=#PLACEHOLDER/>
+    <img src="http://i.telegraph.co.uk/multimedia/archive/02830/cat_2830677b.jpg"/>
     </figure>
     <figure class="gallery">
-      <img src="#PLACEHOLDER/>
+      <img src="http://i.telegraph.co.uk/multimedia/archive/02830/cat_2830677b.jpg"/>
     </figure>
     <figure class="gallery">
-      <img src=#PLACEHOLDER/>
+      <img src="http://i.telegraph.co.uk/multimedia/archive/02830/cat_2830677b.jpg"/>
     </figure>  
     <figure class="gallery">
       <img src="http://i.telegraph.co.uk/multimedia/archive/02830/cat_2830677b.jpg"/>
