--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
       <h3>Address Contact Info</h3>
 <div class="gallery-complete">
   <figure class="gallery">
-    <img src="http://i.telegraph.co.uk/multimedia/archive/02830/cat_2830677b.jpg"/>
+    <img src=PLACEHOLDER/>
     </figure>
     <figure class="gallery">
-      <img src="http://i.telegraph.co.uk/multimedia/archive/02830/cat_2830677b.jpg"/>
+      <img src=PLACEHOLDER/>
     </figure>
     <figure class="gallery">
-      <img src="http://i.telegraph.co.uk/multimedia/archive/02830/cat_2830677b.jpg"/>
+      <img src=PLACEHOLDER/>
     </figure>  
     <figure class="gallery">
-      <img src="http://i.telegraph.co.uk/multimedia/archive/02830/cat_2830677b.jpg"/>
+      <img src=PLACEHOLDER/>
     
     </figure>
     </div>
