--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </figure>  
     <figure class="gallery">
       <img src=PLACEHOLDER/>
+      <div id="container"></div>
     
     </figure>
     </div>
