--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
     </figure>  
     <figure class="gallery">
       <img src=PLACEHOLDER/>
-      <p>container</p>
-    
     </figure>
     </div>
+    <p>container</p
   </body>
 
 </html>
