--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <img src=PLACEHOLDER/>
     </figure>
     </div>
-    <p>container</p
+    <div class="container"></div>
   </body>
 
 </html>
