--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <img src=PLACEHOLDER/>
     </figure>
     </div>
-    <div class="container"></div>
+    <div class="container"><a href=PLACEHOLDER>ENTER</a></div>
   </body>
 
 </html>
